syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.drv.pokemon.api";

import "model/Pokemon.proto";
import "api/message.proto";

package pokemon.api;

service PokemonService {
    rpc GetPokemon (PokemonRequest) returns (PokemonResponse);
}

message PokemonRequest {
    string requestUid = 1;
    Pokemon pokemon = 2;
    int64 userId = 3;
}

message PokemonResponse {
    string requestUid = 1;
    Status status = 2;
    repeated Error errors = 3;
}